feat: init admin

--- a/Edportal/Edportal.csproj
+++ b/Edportal/Edportal.csproj
@@ -6,4 +6,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
+  </ItemGroup>
+  <ItemGroup>
+      <Content Remove="compilerconfig.json" />
+  </ItemGroup>
+
 </Project>
