feat: config ef core

--- a/Edportal/appsettings.json
+++ b/Edportal/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=127.0.0.1;port=3306;database=masters_portal;user=root;password=1234aa;"
+  }
 }
