feat: login logout

--- a/Edportal/appsettings.json
+++ b/Edportal/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "server=127.0.0.1;port=3306;database=masters_portal;user=root;password=1234aa;"
-  }
+  },
+  "JwtSettings": {
+    "SecretKey": "EdportalSecretKey2024",
+    "Issuer": "Edportal",
+    "Audience": "Edportal",
+    "ExpiresInMinutes": 60
+  },
+  "AdminRole":  "admin"
 }
